internal/xds/translator/testdata/out/xds-ir/ratelimit-global-shared.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit/test-namespace/test-policy-1:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: test-namespace/test-policy-1
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: test-namespace/test-policy-1/rule/0
                descriptorValue: test-namespace/test-policy-1/rule/0
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: one
    - match:
        path: foo/baz
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit/test-namespace/test-policy-1:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: test-namespace/test-policy-1
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: test-namespace/test-policy-1/rule/0
                descriptorValue: test-namespace/test-policy-1/rule/0
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: one
          - actions:
            - genericKey:
                descriptorKey: test-namespace/test-policy-1/rule/1
                descriptorValue: test-namespace/test-policy-1/rule/1
            - headerValueMatch:
                descriptorKey: rule-1-match-0
                descriptorValue: rule-1-match-0
                expectMatch: true
                headers:
                - name: x-org-id
                  stringMatch:
                    exact: one
    - match:
        path: test
      name: third-route
      route:
        cluster: third-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit/test-namespace/test-policy-2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: test-namespace/test-policy-2
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: test-namespace/test-policy-2/rule/0
                descriptorValue: test-namespace/test-policy-2/rule/0
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: two
            hitsAddend:
              number: "0"
          - actions:
            - genericKey:
                descriptorKey: test-namespace/test-policy-2/rule/0
                descriptorValue: test-namespace/test-policy-2/rule/0
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: two
            applyOnStreamDone: true
            hitsAddend:
              format: '%DYNAMIC_METADATA(my.cost.ns:request_cost)%'
    - match:
        path: foo/bar
      name: fourth-route
      route:
        cluster: fourth-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: first-listener
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: fourth-route
                descriptorValue: fourth-route
            - genericKey:
                descriptorKey: test-namespace/test-policy-3/rule/0
                descriptorValue: test-namespace/test-policy-3/rule/0
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: two
    - match:
        path: fifth
      name: fifth-route
      route:
        cluster: fifth-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: first-listener
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: fifth-route
                descriptorValue: fifth-route
            - genericKey:
                descriptorKey: test-namespace/test-policy-4/rule/1
                descriptorValue: test-namespace/test-policy-4/rule/1
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: non-shared
        envoy.filters.http.ratelimit/test-namespace/test-policy-4:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: test-namespace/test-policy-4
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: test-namespace/test-policy-4/rule/0
                descriptorValue: test-namespace/test-policy-4/rule/0
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: shared-with-cost
            hitsAddend:
              number: "3"
